targets/srv0/k3s/monitoring/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: base
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`grafana.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
        - name: crowdsec-bouncer
        - name: forwardauth-authelia
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-prod-tls
